<resources>
    <string name="app_name">Freestyle Application 1</string>
    <string name="action_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="sortName_text">Sort by name</string>
    <string name="sortArtist_text">Sort by artist</string>
    <string name="sortDate_text">Sort by date</string>
    <string name="sorted_text">Songs are sorted by:</string>
    <string name="playButton_text">Play</string>
    <string name="title_activity_play_music">PlayMusic</string>
    <string name="playlist_list_text">Playlists</string>
    <string name="title_activity_settings">Settings</string>
    <string name="send_system_broadcast_text">Send system-wide broadcast</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Developers</string>
    <string name="pref_default_display_name">Matthew Nguyen</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="set_color">Set color</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_colors">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Default</item>
    </string-array>
    <string-array name="pref_color_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
