<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.theroungelounge.freestyleapplication1.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings"
        />
    <item
        android:id="@+id/sort_name"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/sortName_text"
        />
    <item
        android:id="@+id/sort_artist"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/sortArtist_text"
        />
    <item
        android:id="@+id/sort_date"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/sortDate_text"
        />
</menu>